# Cobra

./: .gitignore  README.md
app/: CMakeLists.txt  README.md  client  client.cpp  server  server.cpp
cobra-library/: CMakeLists.txt  README.md
cobra-library/src/Networking/socket/: ClientSocket.cpp  ClientSocket.h  ServerSocket.cpp  ServerSocket.h  socket.cpp  socket.h
cobra-library/src/utils/coloredText/: coloredText.cpp  coloredText.h
cobra-library/src/utils/logging/: logging.cpp  logging.h
